<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--Main View (Existing Layout) -->
    <LinearLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="ADD CITY" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="CLEAR ALL" />
    </LinearLayout>

    <ListView
        android:id="@+id/city_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"
        android:listSelector="#999999">

    </ListView>

    <LinearLayout
        android:id="@+id/field_nameEntry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:visibility="invisible">

        <EditText
            android:id="@+id/editText_name"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="City Name"
            android:inputType="textCapWords"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CONFIRM" />

    </LinearLayout>
    </LinearLayout>

    <!-- Detailed View (initially hidden) -->
    <LinearLayout
    android:id="@+id/detail_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    android:background="#FFFFFF">

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BACK" />

        <TextView
            android:id="@+id/detail_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="City Name" />
    </LinearLayout>



</RelativeLayout>
